Верстка окна и основных компонентов

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,6 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <doorlife-root>Loading...</doorlife-root>
+  <doorlife-root id="doorlife-root">Loading...</doorlife-root>
 </body>
 </html>
