добавлен тестирующий компонент estet-door-image

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
+  <estet-door id="estet-door"></estet-door>
   <doorlife-root id="doorlife-root">Loading...</doorlife-root>
 </body>
 </html>
