--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,6 @@
 </head>
 <body>
   <estet-door id="estet-door"></estet-door>
-  <doorlife-root id="doorlife-root">Loading...</doorlife-root>
+  <doorlife-root id="doorlife-root"></doorlife-root>
 </body>
 </html>
